--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-numpy>=1.19.0
-spectral==0.22.1
+numpy>=1.19.5
+spectral
 scipy>=1.5.2
 tqdm>=4.54.0
 seaborn>=0.11.0
 torch>=1.10.0
 matplotlib>=3.3.2
-sklearn
+scikit-learn
 pandas>=1.1.4
 dash>=1.19.0
 dash_daq>=0.5.0
 torchnet
 scikit-image
 ortools==8.2.8710
+rasterio
